fix overflow issue

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -16,7 +16,7 @@
     margin: 15px;
     transform-origin: top center;
     transform: scale(0.6);
-    max-height: 325px;
+    max-height: 500px;
 }
 .phone-preview .screen {
     text-align: left;
